# autoRCcar_indoor

./: .gitignore  README.md  build_ros2.sh  init_build.sh  init_setup.sh  ros2_build.sh
firmware/esp32/: uart_pwm.ino
projects/autoRCcar_rl/: README.md  requirements.txt  setup.py
projects/autoRCcar_rl/autoRCcar_gym/: __init__.py
projects/autoRCcar_rl/autoRCcar_gym/envs/: __init__.py  environment.py  rewards.py  simulation.py  task.py  utils.py
projects/autoRCcar_rl/eval/: eval_model.py  utils.py  waypoints.txt
projects/autoRCcar_rl/test/: cartpole_dqn.ipynb  env_obstacle_test copy.py  env_obstacle_test.py  env_reset_chk.py  env_sim.py  env_test.py  env_wp_test.py
projects/autoRCcar_rl/train/: eval_model.py  run_model.py  run_model_tqc.py  train_model.py  train_ppo.py  train_tqc.py
projects/autoRCcar_rl/train/log/PPO_1/: events.out.tfevents.1714831800.gspark-X670E-PG-Lightning.150603.0
projects/autoRCcar_rl/train/log/TQC_1/: events.out.tfevents.1714835665.gspark-X670E-PG-Lightning.180306.0
ros2/src/: .clang-format
ros2/src/LIO-SAM_MID360_ROS2/: CMakeLists.txt  package.xml
ros2/src/autorccar_control/: CMakeLists.txt  package.xml
ros2/src/autorccar_control/include/: pure_pursuit.h  toolbox.h
ros2/src/autorccar_control/src/: main.cpp  main_manual.cpp  main_sim.cpp  pure_pursuit.cpp  toolbox.cpp
ros2/src/autorccar_costmap/: CMakeLists.txt  README.md  package.xml
ros2/src/autorccar_costmap/config/: config.yaml  rviz2.rviz
ros2/src/autorccar_costmap/include/: config_reader.h  costmap.h  costmap_config_manager.h  costmap_ros_wrapper.h
ros2/src/autorccar_costmap/launch/: costmap.launch.py  rviz2.launch.py
ros2/src/autorccar_costmap/src/: config_reader.cpp  costmap.cpp  costmap_config_manager.cpp  costmap_ros_wrapper.cpp  main_costmap.cpp
ros2/src/autorccar_costmap/test/: bresenham_test.py
ros2/src/autorccar_gcs/: package.xml  setup.cfg  setup.py
ros2/src/autorccar_gcs/autorccar_gcs/: pyqt_gcs_with_pyqtgraph.py
ros2/src/autorccar_gcs/autorccar_gcs/submodules/: cubic_spline.py  user_geometry.py
ros2/src/autorccar_gcs/launch/: autorccar_gcs.launch.py
ros2/src/autorccar_hardware_control/: CMakeLists.txt  package.xml
ros2/src/autorccar_hardware_control/include/: hardware_control.h
ros2/src/autorccar_hardware_control/launch/: hardware_control.launch.py  hardware_control.yaml
ros2/src/autorccar_hardware_control/src/: hardware_control.cpp  hardware_control_node.cpp
ros2/src/autorccar_interfaces/: CMakeLists.txt  package.xml
ros2/src/autorccar_interfaces/msg/: BoundingBoxes.msg  ControlCommand.msg  Gnss.msg  Imu.msg  NavState.msg  Path.msg  PathPoint.msg
ros2/src/autorccar_keyboard/: package.xml  setup.cfg  setup.py
ros2/src/autorccar_keyboard/autorccar_keyboard/: teleop_keyboard_control.py
ros2/src/autorccar_planning_control/: CMakeLists.txt  package.xml
ros2/src/autorccar_planning_control/include/: common.h  cubic_spline_path.h  frenet_optimal_path.h  hw_control.h  planning_control.h  simulator.h
ros2/src/autorccar_planning_control/launch/: planning_control.launch.py  planning_control.rviz  planning_control.yaml  simulator.launch.py
ros2/src/autorccar_planning_control/src/: cubic_spline_path.cpp  frenet_optimal_path.cpp  hw_control.cpp  planning_control.cpp  planning_control_node.cpp  simulator.cpp  simulator_node.cpp
ros2/src/livox_ros_driver2/: build.sh
ros2/src/livox_ros_driver2/config/: MID360_config.json
ros2/src/oCam_publisher/: CMakeLists.txt  README.md  package.xml
ros2/src/oCam_publisher/api/: CMakeLists.txt
ros2/src/oCam_publisher/config/: rviz2.rviz
ros2/src/oCam_publisher/cpp/: CMakeLists.txt  main.cpp
ros2/src/oCam_publisher/launch/: ocam.launch.py  ocam_rviz.launch.py
ros2/src/oCam_publisher/ros2/: publisher.cpp  publisher.hpp
ros2/src/ocam_publisher/: CMakeLists.txt  README.md  package.xml
ros2/src/ocam_publisher/api/: withrobot_camera.cpp  withrobot_camera.hpp
ros2/src/ocam_publisher/config/: params.yaml
ros2/src/ocam_publisher/cpp/: CMakeLists.txt  main.cpp
ros2/src/ocam_publisher/launch/: ocam.launch.py  ocam_rviz.launch.py
ros2/src/ocam_publisher/ros2/: publisher.cpp  publisher.hpp
script/: bag_to_image_sqlite.py  bag_to_pose_csv.py  match_image_pose_to_json copy.py  match_image_pose_to_json.py  sqlite_ros2bag_parser.py
utils/: bag_to_image.py  bag_to_pose_csv.py  sample_images.py
